--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
                 </div>
                 <div class="text-container">
                     <h2>Hi I am Rhiamea D. Requizo</h2>
+                    <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I am a biggest fun of moon.</b>
                     <p><b>Address:</b> Bolo San Jacinto, Pangasinan </p>
                     <p><b>Course & Year:</b> Bachelor of Secondary Education Major in Filipino </p>
+                    <p><b>Favorite Book/s:</b> Harry Potter </p>
                     <p><b>Favorite Song/s:</b> Gonna be ok by Brent morgan</p>
-                    <br><p><i><b> "You will face many defeats in life, but never let yourself be defeated."</b></i>— Maya Angelou</p>
+                    <br><p><i><b> "You will face many defeats in life, but never let yourself be defeated."</b></i> <br>— Maya Angelou</p>
                 </div>
             </div>
     
@@ -60,8 +62,10 @@
                 </div>
                 <div class="text-container">
                     <h2>Hi I am Mailyn G. Alquizar</h2>
+                    <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I love watching k-dramas.</b>
                     <p><b>Address:</b> Esmeralda, Balungao, Pangasinan</p>
                     <p><b>Course & Year:</b> Bachelor of Secondary Education major in Filipino</p>
+                    <p><b>Favorite Book/s:</b> I love reading wattpad books.</p>
                     <p><b>Favorite Song/s:</b> Lagi by Tg monterde</p>
                     <br><p><i><b>The only impossible journey is the one you never begin. </b></i></p>
                 </div>
@@ -74,9 +78,9 @@
                 <img src="pic3.jpg" alt="Avatar">
             </div>
             <div class="text-container">
-                     <h2>Hi I am Ailene Pascua Cabanting</h2>
+                    <h2>Hi I am Ailene Pascua Cabanting</h2>
+                    <b>I'm 21 years old. I am a third year college student at  College of Teacher Education. I am a biggest fun of sunrise.</b>
                     <p><b>Address: </b>Ungab Cuyapo Nueva Ecija</p>
-                    <p><b>Course & Year:</b> Bachelor of Secondary Education Major in Filipino</p>
                     <p><b>Favorite Song/s:</b> Mapa by SB19</p>
                     <br><p><i><b> "All our dreams can come true if we have the courage to pursue them.”</b></i> <br>— Walt Disney</p>
             </div>
@@ -87,11 +91,13 @@
             <img src="pic4.jpg" alt="Avatar">
         </div>
         <div class="text-container"> 
-            <h2>Hi I am Rhodalee Meneses Sangalang- Calingasan</h2>
+            <h2>Hi I am Rhodalee Meneses  <br> Sangalang - Calingasan</h2>
+            <b>I am a fourth year college student at College of Teacher Education.</b>
             <p><b>Address:</b> San Vicente Central Urdaneta City Pangasinan</p>
             <p><b>Course & Year:</b> Bachelor of Secondary Education major in English</p>
+            <p><b>Favorite Book/s:</b> English Books</p>
             <p><b>Favorite Song/s:</b> Kahit Maputi na ang buhok ko by Rey Valera</p>
-            <br><p><i><b> Educating the mind without educating the heart is no education at all  </b></i>- Aristotle</p>
+            <br><p><i><b> Educating the mind without educating the heart is no education at all  </b></i> <br> - Aristotle</p>
         </div>
     </div>
     </div>
@@ -103,12 +109,12 @@
             </div>
             <div class="text-container"> 
                 <h2>Hi I am Aira Nicole Pelaez Acube</h2>
+                <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I am a biggest fun of sunset.</b>
                 <p><b>Address:</b> Calancuasan Sur Cuyapo Nueva Ecija</p>
                 <p><b>Course & Year:</b> Bachelor of Secondary Education major in Filipino</p>
-                <p><b>Favorite Book/s:</b> </p>
+                <p><b>Favorite Book/s:</b> I don't read books, but I do watch movies.</p>
                 <p><b>Favorite Song/s:</b> Ikaw at ako by Moira Dela Torre</p>
-                <p><b>Favorite Movie/s:</b> </p>
-                <br><p><i><b> "He has made everything beautiful in its time"</b></i>- Ecclesiates 3:11</p>
+                <br><p><i><b> "He has made everything beautiful in its time"</b></i> <br>- Ecclesiates 3:11</p>
             </div>
         </div>
         
