--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             </div>
 
             <div class="text-messages">
-            <h1>Title</h1>
-            <p>Welcome message....</p>
+            <h1>Welcome to our Profile</h1>
             </div>
             
             
