--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Project</title>
+    <title>E121 group 4 html</title>
     <link rel="stylesheet" href="proj.css">
 </head>
 
@@ -45,7 +45,7 @@
                     <img src="pic1.jpg" alt="Avatar">
                 </div>
                 <div class="text-container">
-                    <h2>Hi I am Rhiamea D. Requizo</h2>
+                    <h2>Hi, I am Rhiamea D. Requizo</h2>
                     <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I am a biggest fun of moon.</b>
                     <p><b>Address:</b> Bolo San Jacinto, Pangasinan </p>
                     <p><b>Course & Year:</b> Bachelor of Secondary Education Major in Filipino </p>
@@ -60,7 +60,7 @@
                     <img src="pic2.jpg" alt="Avatar">
                 </div>
                 <div class="text-container">
-                    <h2>Hi I am Mailyn G. Alquizar</h2>
+                    <h2>Hi, I am Mailyn G. Alquizar</h2>
                     <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I love watching k-dramas.</b>
                     <p><b>Address:</b> Esmeralda, Balungao, Pangasinan</p>
                     <p><b>Course & Year:</b> Bachelor of Secondary Education major in Filipino</p>
@@ -77,7 +77,7 @@
                 <img src="pic3.jpg" alt="Avatar">
             </div>
             <div class="text-container">
-                    <h2>Hi I am Ailene Pascua Cabanting</h2>
+                    <h2>Hi, I am Ailene Pascua Cabanting</h2>
                     <b>I'm 21 years old. I am a third year college student at  College of Teacher Education. I am a biggest fun of sunrise.</b>
                     <p><b>Address: </b>Ungab Cuyapo Nueva Ecija</p>
                     <p><b>Favorite Song/s:</b> Mapa by SB19</p>
@@ -90,7 +90,7 @@
             <img src="pic4.jpg" alt="Avatar">
         </div>
         <div class="text-container"> 
-            <h2>Hi I am Rhodalee Meneses  <br> Sangalang - Calingasan</h2>
+            <h2>Hi, I am Rhodalee Meneses  <br> Sangalang - Calingasan</h2>
             <b>I am a fourth year college student at College of Teacher Education.</b>
             <p><b>Address:</b> San Vicente Central Urdaneta City Pangasinan</p>
             <p><b>Course & Year:</b> Bachelor of Secondary Education major in English</p>
@@ -107,9 +107,9 @@
                 <img src="pic5.jpg" alt="Avatar">
             </div>
             <div class="text-container"> 
-                <h2>Hi I am Aira Nicole Pelaez Acube</h2>
+                <h2>Hi, I am Aira Nicole Pelaez Acube</h2>
                 <b>I'm 20 years old. I am a third year college student at College of Teacher Education. I am a biggest fun of sunset.</b>
-                <p><b>Address:</b> Calancuasan Sur Cuyapo Nueva Ecija</p>
+                <p><b>Address:</b> Calancuasan Sur, Cuyapo, Nueva Ecija</p>
                 <p><b>Course & Year:</b> Bachelor of Secondary Education major in Filipino</p>
                 <p><b>Favorite Book/s:</b> I don't read books, but I do watch movies.</p>
                 <p><b>Favorite Song/s:</b> Ikaw at ako by Moira Dela Torre</p>
